--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   height: 95%;
   background-color: white;
   border-radius: 5px;
+  position: relative;
 }
 
 .selectionContainer {
@@ -40,7 +41,8 @@ body {
   height: 50px;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  /* justify-content: space-between; */
 }
 
 #rightContainer {
@@ -95,4 +97,25 @@ body {
 
 .boxInfo {
   font-size: 10pt;
+}
+
+/* Style the dots by assigning a fill and stroke */
+.dot {
+  fill: #ffab00;
+  stroke: #fff;
+}
+
+.dot2 {
+  fill: black;
+  stroke: #fff;
+}
+
+/* Legend */
+#legendContainer {
+  background-color: #ededed;
+
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border-radius: 5px;
 }
