--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 #rightContainer {
   width: 27%;
   height: 95%;
-  background-color: white;
+  background-color: dimgray;
   border-radius: 5px;
 }
 
@@ -62,4 +62,16 @@ body {
 
 .filled{
   fill: url(#gradient);
+}
+
+#RightHeader{
+  font-family: Arvo;
+  margin-left: 1.3vw;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  font-size: 1.8vh;
+}
+
+.testlol{
+  text-shadow: 1px 1px 2px black;
 }
