--- a/styles/style.css
+++ b/styles/style.css
@@ -34,15 +34,7 @@ body {
   background-color: white;
   border-radius: 5px;
   position: relative;
-}
-
-.selectionContainer {
-  margin: 10px;
-  height: 50px;
-
-  display: flex;
-  flex-direction: row;
-  /* justify-content: space-between; */
+  /* background-color: #696969; */
 }
 
 #rightContainer {
@@ -67,12 +59,12 @@ body {
 /* .listRow:hover {
   font-weight: 700;
 } */
-.country {
+/* .country {
   cursor: pointer;
 }
 .country:hover {
   font-weight: 700;
-}
+} */
 
 #bottomContainer {
   width: 95%;
@@ -94,41 +86,6 @@ body {
   padding: 5px;
   border: 0.5px solid #d1d1d1;
 }
-
 .boxInfo {
   font-size: 10pt;
-}
-
-/* Style the dots by assigning a fill and stroke */
-.dot {
-  fill: #ffab00;
-  stroke: #fff;
-}
-
-.dot2 {
-  fill: black;
-  stroke: #fff;
-}
-
-/* Legend */
-#legendContainer {
-  background-color: #ededed;
-
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  border-radius: 5px;
-}
-
-#futureButton {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  /* margin-left: 20px; */
-}
-
-#historyButton {
-  position: absolute;
-  bottom: 20px;
-  left: 200px;
 }
