--- a/styles/map.css
+++ b/styles/map.css
@@ -33,8 +33,8 @@
 }
 
 .label {
-  font: 15px 'Bahnschrift';
-  font-weight: 700;
+  /* font: 15px 'Bahnschrift';
+  font-weight: 700; */
 }
 
 div.tooltip {
