--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 * {
-  /* font-family: Signika, 'sans-serif'; */
-  font-family: Signika;
+  font-family: Nunito;
 }
 body {
   background-color: #bebebe;
@@ -13,17 +12,27 @@ body {
 #wrapper {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  /* background-color: #ededed; */
-  /* border: 1px solid red; */
   width: 100vw;
   height: 100vh;
   padding: 0px 40px 0 40px;
 }
 
+#header {
+  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+  min-height: 70px;
+  margin-top: 10px;
+  display: flex;
+  font-size: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #topWrapper {
-  height: 75%;
+  height: 85%;
   /* background-color: #ededed; */
   width: 100%;
   display: flex;
@@ -31,11 +40,13 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #graphContainer {
-  width: 70%;
-  height: 95%;
+  width: 75%;
+  margin-right: 10px;
+  height: 100%;
   background-color: white;
   border-radius: 5px;
   position: relative;
@@ -45,7 +56,7 @@ body {
 #rightContainer {
   padding: 10px;
   width: 27%;
-  height: 95%;
+  height: 100%;
   background-color: white;
   border-radius: 5px;
   overflow: auto;
@@ -61,15 +72,6 @@ body {
   justify-content: space-between;
   max-width: 400px;
 }
-/* .listRow:hover {
-  font-weight: 700;
-} */
-/* .country {
-  cursor: pointer;
-}
-.country:hover {
-  font-weight: 700;
-} */
 
 #bottomContainer {
   width: 95%;
